# tuLector

./: .env.local.example  .gitignore  .vercelignore  capacitor.config.ts  codemagic.yaml  middleware.ts  next.config.ts  omr_reference.json  package-lock.json  package.json  test_omr.ts  test_omr_real.ts  training_plan.json  tulector_tech.json  zipgrade_tech.json
android/: .gitignore  capacitor.settings.gradle  gradle.properties
capacitor-www/: index.html
docs/: apk-plan-v2-deepseek.md  apk-plan.md  brazil-market-research.md  codigo-hoja-spec.md  dashboard-v2-plan.md  dlocal-pasarela-unificada.md  generador-hojas-spec.md  (+22 more)
mobile/: CMakeLists.txt  README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/app/tulector/tulector/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: app.dart  main.dart
mobile/lib/config/: scanner_config.dart
mobile/lib/models/: scan_result.dart
mobile/lib/screens/: scanner_screen.dart
mobile/lib/services/: camera_service.dart  omr_bridge.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/native/: omr_engine.cpp  omr_engine.h
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
(+351 files in other folders)
